--- a/Alonzo_Summative/Alonzo_Summative/Contact.html
+++ b/Alonzo_Summative/Alonzo_Summative/Contact.html
@@ -41,19 +41,19 @@
                 <div class="contact-card shadow-effect">
                     <div class="contact-icon">📧</div>
                     <h3>Email</h3>
-                    <p><a href="mailto:earl.alonzo@example.com">earl.alonzo@example.com</a></p>
+                    <p><a href="mailto:aed0182@dlsud.edu.ph">aed0182@dlsud.edu.ph</a></p>
                 </div>
 
                 <div class="contact-card shadow-effect">
                     <div class="contact-icon">📱</div>
                     <h3>Phone</h3>
-                    <p><a href="tel:+639123456789">+63 912 345 6789</a></p>
+                    <p><a href="tel:+639950275909">+63 995 027 5909</a></p>
                 </div>
 
                 <div class="contact-card shadow-effect">
                     <div class="contact-icon">📍</div>
                     <h3>Location</h3>
-                    <p>Dasmariñas, Cavite, Philippines</p>
+                    <p>Imus Cavite, Philippines</p>
                 </div>
             </div>
         </section>
