--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="Services.html">Services</a></li>
